--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
+    "pre-deploy": "npm version patch && git add . ",
     "deploy-stage": "npm run build && cd deployment && npm run deploy",
     "deploy-dev": "npm run build && cd deployment && npm run go-live",
     "version-build": "npm version patch && node ./version.build.js",
