--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "pre-deploy": "npm version patch && git add . ",
     "deploy-stage": "npm run build && cd deployment && npm run deploy",
     "deploy-dev": "npm run build && cd deployment && npm run go-live",
-    "version-build": "npm version patch && node ./version.build.js",
-    "bump": "npm version patch && node ./replace.build.js"
+    "version-build": "npm version patch && node ./version.build.js"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "npm run version-build && git add ."
+    }
   },
   "private": true,
   "dependencies": {
