--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "npm run version-build && git add . && git commit -m 'bump'"
+      "pre-push": "npm run version-build && git add . && git commit -m 'version bumped' -a 'minor'"
     }
   },
   "private": true,
