--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "npm run version-build && git add . && git commit -m 'version bumped' && git tag 'patch'"
+      "pre-push": "npm run version-build && git add . && git commit -m 'patch released'"
     }
   },
   "private": true,
