--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "npm run version-build && git add src/environments/version.ts && git commit -m 'version updated'"
+      "pre-push": "npm run version-build && git add src/environments/version.ts && git commit -m $npm_package_version"
     }
   },
   "private": true,
