--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "npm run version-build && git add src/environments/version.ts && git commit -m 'version bumped'"
+      "pre-push": "npm run version-build --git-tag-version=false && git add src/environments/version.ts && git commit -m 'version bumped'"
     }
   },
   "private": true,
