--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "push": "git push && git push --tags",
     "pre-deploy": "npm version patch && git add . ",
     "deploy-stage": "npm run build && cd deployment && npm run deploy",
     "deploy-dev": "npm run build && cd deployment && npm run go-live",
     "version-build": "npm version patch && node ./version.build.js"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "npm run version-build --git-tag-version=false && git add src/environments/version.ts && git commit -m \"version bumped to $npm_package_version\" "
+    }
   },
   "private": true,
   "dependencies": {
