--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "pre-deploy": "npm version patch && git add . ",
     "deploy-stage": "npm run build && cd deployment && npm run deploy",
     "deploy-dev": "npm run build && cd deployment && npm run go-live",
-    "version-build": "npm version patch && node ./version.build.js"
+    "version-build": "npm version patch --git-tag-version=false && node ./version.build.js"
   },
   "husky": {
     "hooks": {
-      "pre-push": "npm run version-build --git-tag-version=false && git add src/environments/version.ts && git commit -m \"version bumped to echo $npm_package_version\" "
+      "pre-push": "npm run version-build && git add src/environments/version.ts && git commit -m \"version bumped to $npm_package_version\" "
     }
   },
   "private": true,
