--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nostromo",
-  "version": "0.0.33",
+  "version": "0.0.34",
   "scripts": {
     "ng": "ng",
     "cat": "echo $npm_package_version",
@@ -19,7 +19,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "npm run version-build && git add src/environments/version.ts && git commit -m \"version bumped to echo $npm_package_version\" "
+      "pre-push": "npm run version-build && git add . && git commit -m \"version bumped to echo $npm_package_version\" "
     }
   },
   "private": true,
