--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "build": "ng build",
     "build-dev": "ng build",
     "build-public": "ng build --prod",
+    "tag": "git push",
+    "bump": "npm run version-build && git add . && git commit --amend -m \" commit empty $npm_package_version\"",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -16,11 +18,6 @@
     "deploy-stage": "npm run build && cd deployment && npm run deploy",
     "deploy-dev": "npm run build && cd deployment && npm run go-live",
     "version-build": "npm version patch --git-tag-version=false && node ./version.build.js"
-  },
-  "husky": {
-    "hooks": {
-      "pre-push": "npm run version-build && git add . && git commit --amend -m \" commit empty $npm_package_version\" "
-    }
   },
   "private": true,
   "dependencies": {
