--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "ng build",
     "build-dev": "ng build",
     "build-public": "ng build --prod",
-    "tag": "git tag 0.0.39",
+    "changelog": "git-to-changelog",
+    "tag": "git tag v0.0.39",
     "bump": "npm run version-build && git add . && git commit --amend -m \" commit empty $npm_package_version\"",
     "test": "ng test",
     "lint": "ng lint",
@@ -45,6 +46,7 @@
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "conventional-changelog-cli": "^2.0.11",
+    "git-to-changelog": "^1.3.0",
     "husky": "^1.2.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
