--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
+    "ngh": "ng build --prod --base-href 'https://glosik.github.io/nostromo/'",
     "pre-deploy": "npm version patch && git add . ",
     "deploy-stage": "npm run build && cd deployment && npm run deploy",
     "deploy-dev": "npm run build && cd deployment && npm run go-live",
