--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "ng build",
     "build-dev": "ng build",
     "build-public": "ng build --prod",
+    "build-ngh": "ng build --prod --baseHref=https://glosik.github.io/nostromo/",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -41,18 +42,19 @@
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
+    "angular-cli-ghpages": "^0.5.3",
     "codelyzer": "~4.5.0",
     "conventional-changelog-cli": "^2.0.11",
+    "husky": "^1.2.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.1.1",
-    "husky": "^1.2.0",
-    "replace-in-file": "^3.4.2",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
+    "replace-in-file": "^3.4.2",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.1.6"
